Fixed various bugs
submenu caret
logout issue
confusing counter issue
connection not showing up on connection page
fixed images on frontpage

--- a/clientApp/css/frontpage.less
+++ b/clientApp/css/frontpage.less
@@ -24,6 +24,7 @@
 }
 
 .frontpage__first-timer {
+  background-color:yellow;
   text-align: center;
   margin-top: 3em;
   margin-bottom: 3em;
